
* Removed collapsibility of Attribute node's attributes plug as it just cluttered up the UI.

* Removed collapsibility of Lights node's parameters plug as it just cluttered up the UI.

* Fixed MeshType::affects() (#175).

* Fixed SceneInspector update (#176).

* Improved SceneInspector shader representation (#147).

0.58.0
======

* Fixed creation of nodes within Boxes - previously they were added below the root of the script rather than inside the box.

* Fixed unstable scene hierarchy expansion (issue #120).

* Fixed highlighting bugs whereby widgets inside a highlighted tab would incorrectly display an inherited highlight state. This could be seen when dragging a node into the node editor with either nested tabs or a nested VectorDataWidget.

* Fixed PathPlugValueWidget bug where it would attempt to change the value of a read only plug.

* Fixed PathWidget bug where it would still do autocompletion and popup menus even when non-editable.

* Added TabbedContainer.insert() method.

* Generalised the Metadata system to store arbitrary values rather than just descriptions.

* Fixed CompoundPlugValueWidget bug whereby it would error if a summary was provided on a non-collapsible UI.

* Added right-click context menus to enum and checkbox plug uis.

* Added Box plug-promotion feature (#142).

* Removed Gaffer.GroupNode (#164).

* Fixed ordering of parameters in RenderManShader UI (#136).

* Fixed banding and dark edges evident in 2D viewer (#74).

* Fixed awkward zooming of Viewers and NodeGraph (#46).

0.57.0
======

* Renamed ColorPlug child names to rgba rather than xyzw (issue #133).

* File->SaveAs... menu item now adds the file to the recent files list.

* Fixed unwanted vertical expansion of color plug widgets.

* Removed the unwanted visualisation of the "name" plug on shaders in the Node Graph.

* Added NodeGraph plugContextMenuSignal() and connectionContextMenuSignal() to allow customisable right click menus for plugs and connections (issue #122).
