@@ -14,6 +14,8 @@
 
 * Improved SceneInspector shader representation (#147).
 
+* Improved SceneInspector numeric formatting (#88).
+
 0.58.0
 ======
 
